<resources>
    <!-- Application -->
    <string name="app_name">PetoiControllerKotlin</string>

    <!-- Global -->
    <string name="btn_back">Back</string>
    <string name="btn_save">Save</string>
    <string name="btn_test">Test</string>
    
    <!-- MainActivity -->
    <string name="menu_main_calib">Calibration</string>
    <string name="menu_main_connect">Connection</string>

    <string name="ibt_main_up">Up</string>
    <string name="ibt_main_down">Down</string>
    <string name="ibt_main_left">Left</string>
    <string name="ibt_main_right">Right</string>

    <string name="ibt_main_high">HighVelocity</string>
    <string name="ibt_main_medium">MediumVelocity</string>
    <string name="ibt_main_low">LowVelocity</string>

    <string name="ibt_main_add">AddMotion</string>
    <string name="ibt_main_remove">RemoveMotion</string>

    <!-- CalibrationActivity -->
    <string name="img_illustration">PetoiBittle</string>
    <string name="ibt_increase">IncreaseAngle</string>
    <string name="ibt_decrease">DecreaseAngle</string>

    <string name="label_servo">Servo</string>

    <string name="servo0">Servo 0</string>

    <string name="servo8">Servo 8</string>
    <string name="servo9">Servo 9</string>
    <string name="servo10">Servo 10</string>
    <string name="servo11">Servo 11</string>
    
    <string name="servo12">Servo 12</string>
    <string name="servo13">Servo 13</string>
    <string name="servo14">Servo 14</string>
    <string name="servo15">Servo 15</string>

    <!-- MotionActivity -->
    <string name="lb_motion_name">Name</string>
    <string name="lb_motion_action">Action</string>

    <!-- DeviceConnectActivity -->
    <string name="lb_connect_research">Research</string>
    <string name="lb_connect_connect">Connection</string>

    <!-- LegalInfoActivity -->
    <string name="btn_legal_agree">Agree</string>
    <string name="btn_legal_disagree">Disagree</string>
</resources>