<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Activity default -->
        <Button 
            android:id="@+id/btn_motion_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_back"/>

        <!-- 主要内容控制-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_motion_name"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:text="@string/lb_motion_name" />
                
                <EditText
                    android:id="@+id/tx_editor_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Say Hello, etc."
                    android:hint="@string/lb_motion_name"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_motion_action"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tx_editor_command"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Petoi serial command, such as: khi"
                    android:hint="@string/lb_motion_action"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_editor_output"
                    android:layout_width="348dp"
                    android:layout_height="330dp"
                    android:textColor="@color/black"
                    android:background="@color/yolk_yellow"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_editor_test"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:text="@string/btn_test" />

                <Button
                    android:id="@+id/btn_editor_save"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:text="@string/btn_save" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>