<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Activity default -->
        <Button 
            android:id="@+id/btn_calib_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_back"/>


        <!-- 示例图片 -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_weight="3"
            android:layout_marginTop="30dp"
            android:src="@drawable/illustration"
            android:contentDescription="@string/img_illustration" />

        <TextView
            android:id="@+id/tv_calib_output"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:visibility="invisible"/>

        <!-- 控制按钮组 -->
        <RelativeLayout
            android:layout_weight="2"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_calib_add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/positive"
                    android:scaleType="fitXY"
                    android:background="@color/transparency"
                    android:contentDescription="@string/ibt_increase" />

                <ImageButton
                    android:id="@+id/btn_calib_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/negative"
                    android:scaleType="fitXY"
                    android:background="@color/transparency"
                    android:contentDescription="@string/ibt_increase"/>

                <Spinner
                    android:id="@+id/spn_calib_servos"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_width="230dp"
                    android:layout_height="40dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_calib_save"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:text="@string/btn_save" />

        </RelativeLayout>

    </LinearLayout>

    
</androidx.constraintlayout.widget.ConstraintLayout>